
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAR 11a
  * in bin
    - improved Keller-Kloker.wrp


2019 MAR 09b
  * in bin
    - modified Keller-Kloker.wrp


2019 MAR 09a
  * in bin
    - added Keller-Kloker.wrp


2019 MAR 08b
  * in bin
    - modified carbuncle.wrp and ns_SDBD.wrp


2019 MAR 08a
  * in cycle/resconv/_MUSCL+/resconv.c
    - removed FLUX_FDSplusFilterMultiD in read_disc_resconv_actions(), find_Fstar_interface() 
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in cycle/share/res_share.c
    - removed filter_Fstar_interface_positivity_preserving_MultiD()
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in model/fluid/_*/fluid_conv.c and model/fluid/_drift-diffusion/fluid.c
    - deleted find_M_from_jacvars(), find_Minv_from_jacvars(), find_MUstar_from_jacvars()
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in model/share/fluid_share.c
    - deleted condition_Lambda_plus_minus_Parent_old()
    - deleted condition_Lambda_plus_minus_Parent_veryold()
  * in src/test.c
    - deleted test_MUstar(), test_Minv(), test_M()


2019 MAR 07b
  * renamed
    - SetXstation to XSTATION_Set
    - _Pback_xstation to XSTATION_Pback
    - _Fpot_xstation to XSTATION_Fpot
    - _mdot_xstation to XSTATION_mdot
    - _Pstag_xstation to XSTATION_Pstag
    - _Tstag_xstation to XSTATION_Tstag
    - _Pstar_xstation to XSTATION_Pstar
    - _Pstar_xstation to XSTATION_Pstar
    - _T_xstation to XSTATION_T
    - _q_xstation to XSTATION_q
    - _rho_xstation to XSTATION_rho
    - _htstar_xstation to XSTATION_htstar
  * in tools
    - moved substr.sh to replace.sh
  * in tools/replace.sh
    - changed the flag -sub for -replace